--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,196 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.splash {
+  background-image: url("https://blackrockdigital.github.io/startbootstrap-agency/img/header-bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 80vh;
+  width: 100vw;
+}
+
+.topnav {
+  height: 15vh;
+  width: 60vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.topnav button {
+  height: 8vh;
+  background: none;
+  font-size: 1.5em;
+  padding: 1vw;
+  color: #fec503;
+  border: none;
+}
+
+#innernav button {
+  font-size: 1.1em;
+  color: white;
+  transition-duration: 0.3s;
+  padding: 0px 1.5vw;
+}
+
+#innernav button:hover {
+  color: #fec503;
+}
+
+.outertitle {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  height: 65vh;
+  width: 60vw;
+  font-size: 2em;
+  text-align: center;
+  margin: 18vh 0px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.outertitle button {
+  background: #fec136;
+  opacity: 0.95;
+  color: white;
+  font-size: 0.6em;
+  padding: 1vw 2vw;
+  border: transparent;
+  border-radius: 5%;
+  margin: 5vh 0px;
+  transition-duration: 0.5s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.outertitle button:hover {
+  background-color: #fec503;
+  opacity: 1;
+}
+
+.services {
+  height: 90vh;
+  width: 70vw;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  font-size: 1.25em;
+  align-self: center;
+}
+
+.servicebox {
+  margin: 5vh 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.servicecontent {
+  width: 20vw;
+  font-weight: lighter;
+  padding: 1vw;
+}
+
+@media (max-width: 1480px) {
+  .topnav {
+    width: 80vw;
   }
-  to {
-    transform: rotate(360deg);
+  .outertitle {
+    width: 80vw;
+    font-size: 1.75em;
+  }
+
+  .services {
+    width: 90vw;
+  }
+
+  .servicecontent {
+    width: 40vw;
+    font-weight: lighter;
+  }
+
+  .outertitle button {
+    padding: 1.5vw 4vw;
+  }
+}
+
+@media (max-width: 1024px) {
+  .splash {
+    height: 90vh;
+  }
+  .topnav {
+    width: 80vw;
+    font-size: 0.8em;
+  }
+  .outertitle {
+    width: 80vw;
+    font-size: 1.25em;
+  }
+
+  .services {
+    width: 90vw;
+    font-size: 1.1em;
+  }
+
+  .servicecontent {
+    width: 40vw;
+    font-weight: lighter;
+  }
+
+  .outertitle button {
+    padding: 3vw 8vw;
+    font-size: 1.5em;
+  }
+}
+
+@media (max-width: 700px) {
+  body {
+    background-color: greenyellow;
+  }
+  .splash {
+    height: 65vh;
+  }
+  .topnav {
+    width: 100vw;
+    font-size: 0.7em;
+    height: 5vh;
+  }
+  .outertitle {
+    width: 80vw;
+    font-size: 1.5em;
+    margin: 0;
+  }
+
+  .services {
+    width: 90vw;
+    font-size: 1em;
+  }
+
+  .servicecontent {
+    width: 40vw;
+    font-weight: lighter;
+  }
+
+  .outertitle button {
+    padding: 3vw 8vw;
+    font-size: 1.5em;
+  }
+}
+
+@media (max-width: 480px) {
+  body {
+    background-color: lightblue;
   }
 }
